2013-10-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/strcpy.S (strcpy): Add word load/store
	to provide a boost for large inputs with word alignment.
	* sysdeps/powerpc/powerpc64/stpcpy.S (__stpcpy): Rewrite
	implementation based on optimized PPC64 strcpy.
	* sysdeps/powerpc/powerpc64/power7/strcpy.S: New file: optimized
	strcpy for PPC64/POWER7 based on both doubleword and word load/store.
	* sysdeps/powerpc/powerpc64/power7/stpcpy.S: New file: optimized
	stpcpy for PPC64/POWER7 based on PPC64/POWER7 strcpy.

2013-10-25  Siddhesh Poyarekar  <siddhesh@redhat.com>

<<<<<<< HEAD
	* sysdeps/ieee754/ldbl-128ibm/e_acosl.c (__ieee754_acosl): Check
	for NaNs before doing comparisons on argument.
	* sysdeps/ieee754/ldbl-128ibm/e_asinl.c (__ieee754_asinl):
	Likewise.

2013-10-04  Alan Modra  <amodra@gmail.com>

	* sysdeps/powerpc/powerpc32/dl-machine.c (__process_machine_rela):
	Use stdint types in rather than __attribute__((mode())).
	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_rela): Likewise.

2013-10-04  Alan Modra  <amodra@gmail.com>

	* sysdeps/powerpc/powerpc32/dl-machine.c (__process_machine_rela):
	Correct handling of unaligned relocs for little-endian.
	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_rela): Likewise.

2013-10-04  Alan Modra  <amodra@gmail.com>

	* configure.in: Map powerpc64le and powerpcle to base_machine/machine.
	* configure: Regenerate.
	* nptl/shlib-versions: Powerpc*le starts at 2.18.
	* shlib-versions: Likewise.

2013-10-04  Alan Modra  <amodra@gmail.com>

	* string/tester.c (test_memrchr): Increment reported test cycle.

2013-10-04  Alan Modra  <amodra@gmail.com>

	* string/test-memcpy.c (do_one_test): When reporting errors, print
	string address and don't overrun end of string.

2013-10-04  Alan Modra  <amodra@gmail.com>

	* sysdeps/powerpc/powerpc64/power7/memchr.S: Replace rlwimi with
	insrdi.  Make better use of reg selection to speed exit slightly.